<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.info.InfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="32dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_title"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:paddingBottom="12dp" />

        <TextView
            android:id="@+id/tvAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_about"
            android:paddingBottom="20dp" />

        <TextView
            android:id="@+id/tvHowTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_how_title"
            android:textStyle="bold"
            android:paddingBottom="8dp" />

        <TextView
            android:id="@+id/tvHow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_howto"
            android:paddingBottom="20dp" />

        <TextView
            android:id="@+id/tvLegendTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_legend_title"
            android:textStyle="bold"
            android:paddingBottom="8dp" />

        <TextView
            android:id="@+id/tvLegend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_legend"
            android:paddingBottom="20dp" />

        <TextView
            android:id="@+id/tvPrivacyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_privacy_title"
            android:textStyle="bold"
            android:paddingBottom="8dp" />

        <TextView
            android:id="@+id/tvPrivacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_privacy"
            android:paddingBottom="20dp" />

    </LinearLayout>
</ScrollView>
